syntax = "proto3";

package user;

option go_package = "github.com/JeroZp/gRPC-MOM/API-Gateway/internal/user_service/proto;proto";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  int32 credits = 4;
}

message CreateUserRequest { User user = 1; }
message CreateUserResponse { User user = 1; }

message ListUsersRequest    {}
message ListUsersResponse   { repeated User users = 1; }

message UpdateUserRequest { User user = 1; }
message UpdateUserResponse { User user = 1; }

message DeleteUserRequest { string id = 1; }
message DeleteUserResponse { string message = 1; }

service UserService {
  rpc CreateUser(CreateUserRequest)   returns (CreateUserResponse);
  rpc ListUsers(ListUsersRequest)     returns (ListUsersResponse);
  rpc UpdateUser(UpdateUserRequest)   returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest)   returns (DeleteUserResponse);
}
