syntax = "proto3";
option go_package = "Transaction/protobuf";

message Amount {
    int64 amount = 1;
    string currency = 2;
}

message Transaction {
    string from = 1;
    string to = 2;
    Amount amount = 3;
}

message CreateRequest {
    Amount amount = 1;
    string from = 2;
    string to = 3;
}

message CreateResponse {
    bool success = 1;
    string message = 2;
    Transaction transaction = 3;
}

service TransactionService {
    rpc Create(CreateRequest) returns (CreateResponse);
}
